--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <body>
     <h1>Magnet to Feed - by lapisdasilva</h1>
     <h2>Instalado com Sucesso!</h2>
+    <br>
+    <h2>Para acessar o feed, utilize o o link http://ip-desse-servidor/rss/feed.xml</h2>
 </body>
 </html>
